<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetActivity"
    android:background="#bbdefb">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_received_otp_below"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_4_characters"
        android:padding="8dp"
        android:layout_margin="20dp"
        android:layout_below="@id/txtText"
        android:background="#42a5f5"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/etOTP"
        android:background="#42a5f5"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/etNewPassword"
        android:background="#42a5f5"
        android:textColorHint="#ffffff"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/submit"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>

</RelativeLayout>