<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#bbdefb">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10digit"
        android:layout_below="@id/imgLogo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#42a5f5"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:hint="@string/password"
        android:background="#42a5f5"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:text="@string/log_in"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

</RelativeLayout>