<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#bbdefb">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_address"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_below="@id/imgLogo"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/etMobileNumberForgotPasswod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtText"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#42a5f5"
        android:hint="@string/mobile_number_10digit"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="5dp"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/etEmailAddressForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumberForgotPasswod"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_address"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColorHint="#ffffff"
        android:background="#42a5f5"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailAddressForgotPassword"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

</RelativeLayout>