<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MyProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imgperson"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/person"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txtPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:layout_margin="8dp"
                android:background="#ffffff" />
            <TextView
                android:id="@+id/txtPersonNumber"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:text="@string/_91_6362621650"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:layout_below="@id/txtPersonName"
                android:background="#ffffff"/>
            <TextView
                android:id="@+id/txtPersonEmailAdress"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/txtPersonNumber"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:background="#ffffff"/>
            <TextView
                android:layout_margin="8dp"
                android:id="@+id/txtPersonDeliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPersonEmailAdress"
                android:text="@string/delivery_address"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:background="#ffffff"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>