<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp"
    android:background="#ffffff">
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background = "#ffffff"
        android:weightSum = "6"
        android:id="@+id/llContext">

       <androidx.cardview.widget.CardView
           android:layout_weight = "2"
           android:layout_width="0dp"
           android:layout_height="100dp"
           android:layout_marginStart="10dp"
           android:layout_marginTop="9dp"
           app:cardCornerRadius="6dp">

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/imgResImage"
               android:layout_gravity="center"
               android:src="@mipmap/ic_launcher"
               android:scaleType="centerCrop" />

       </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2.9"
            android:layout_margin="8dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtResName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_restaurant"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtResPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResName"
                android:text="@string/_300_person"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_rupee_indian"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="5dp"/>

        </RelativeLayout>

       <RelativeLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1.2">

           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true">

               <ImageView
                   android:id="@+id/imgFav"
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/ic_rating"
                   android:layout_marginBottom="5dp"/>

               <TextView
                   android:id="@+id/txtResRating"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="#ffca28"
                   android:text="@string/_4_5"
                   android:layout_below="@id/imgFav"
                   android:textStyle="bold"
                   android:textSize="15sp"
                   android:layout_marginStart="5dp"/>

           </RelativeLayout>

       </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>